compiler/tests/ui/fail/foo_const.rs
#[compiler::item("foo_const")]
trait Foo {}

fn main() {}
